--- a/package.json
+++ b/package.json
@@ -3,9 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "@emotion/core": "^10.0.5",
+    "@emotion/styled": "^10.0.5",
+    "react": "^16.7.0-alpha.2",
+    "react-bulma-components": "2.3.0",
+    "react-dom": "^16.7.0-alpha.2",
     "react-scripts": "2.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^1.2.0",
+    "prettier": "^1.15.3",
+    "pretty-quick": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,7 +24,16 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "prettier",
+      "prettier/react"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "browserslist": [
     ">0.2%",
