--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "ui",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "react": "^16.7.0-alpha.2",
-    "react-bulma-components": "2.3.0",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-scripts": "2.1.1"
+    "react": "^16.7.0-alpha.3",
+    "react-dom": "^16.7.0-alpha.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "rebass": "^3.0.0-12",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "eslint-config-prettier": "^3.3.0",
