--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@rehooks/window-size": "^1.0.2",
     "react": "^16.7.0-alpha.3",
     "react-dom": "^16.7.0-alpha.3",
+    "react-p5-wrapper": "^0.0.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
